# ml_exercises

./: LICENSE  README.md  ml_use_cases_spotlight.docx  pyproject.toml  requirements.txt  test_installation.ipynb
data/: articles_short.json  cement_samples.csv  toydata1.csv  toydata2.csv
data/hdf_data/: df_2016_0.csv  df_2016_1.csv  df_2016_10.csv  df_2016_14.csv  df_2016_2.csv  df_2016_3.csv  df_2016_5.csv  df_2016_7.csv  df_2017_0.csv  df_2017_1.csv  df_2017_10.csv  df_2017_14.csv  df_2017_2.csv  df_2017_3.csv  df_2017_5.csv  df_2017_7.csv
exercises/: 1_visualize_text.ipynb  2_image_quantization.ipynb  3_supervised_comparison.ipynb  4_information_retrieval.ipynb  5_mnist_keras.ipynb  5_mnist_torch.ipynb  6_analyze_toydata.ipynb  7_hard_drive_failures.ipynb  8_rl_gridmove.ipynb
notebooks/: 1_visualize_text.ipynb  2_image_quantization.ipynb  3_supervised_comparison.ipynb  4_analyze_toydata.ipynb  5_hard_drive_failures.ipynb  5_mnist_keras.ipynb  5_mnist_torch.ipynb  5_quality_prediction.ipynb  5a_quality_prediction.ipynb  5b_quality_prediction_backend.ipynb  6_analyze_toydata.ipynb  6_mnist_keras.ipynb  6_mnist_torch.ipynb  7_hard_drive_failures.ipynb  7_information_retrieval.ipynb  8_rl_gridmove.ipynb  causal_model.ipynb
other/: exercise_ml_use_cases_spotlight.docx  exercise_your_ml_project_template.docx  ml_course_workbook.docx
