[project]
name = "ml_exercises"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.2",
    "notebook~=6.5",
    "numpy>=1.22.3,<2",
    "pandas>=1.4.2,<3",
    "seaborn>=0.13.2",
    "scipy>=1.8.0",
    "scikit-learn>=1.2.0",
    "joblib>=1.2.0",
    "pillow>=9.1.0",
    "plotly>=5.7.0",
    "xlrd>=2.0.1",
    "requests>=2.27.1",
    "fastapi[all]>=0.109.2",
    "skorch>=0.15.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
]
